fix whitespace wrapping in ticker

--- a/src/components/main/ticker/tickerTape.css
+++ b/src/components/main/ticker/tickerTape.css
@@ -2,4 +2,5 @@
   margin: 0px 5px 0px 5px;
   font-weight: 400;
   font-family: Montserrat;
+  white-space: nowrap;
 }
